--- a/app/src/main/res/layout/item/layout/shehui_fragment.xml
+++ b/app/src/main/res/layout/item/layout/shehui_fragment.xml
@@ -4,10 +4,10 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:orientation="vertical">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="头条"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="社会"/>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/toutiao_swipe"
         android:layout_width="match_parent"
