1.添加点击水波纹ripper效果 2.查看新闻添加返回actionbar 3.app图标更换

--- a/app/src/main/res/layout/fragment/layout/toutiao_fragment.xml
+++ b/app/src/main/res/layout/fragment/layout/toutiao_fragment.xml
@@ -2,21 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
+    android:background="@color/white"
     android:orientation="vertical">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="头条"/>
+
+    <LinearLayout
+        android:id="@+id/line_progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/toutiao_swipe"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/toutiao_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
             ></android.support.v7.widget.RecyclerView>
     </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
