--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="super_light_grey">#c6c4c5</color>
+    <color name="line_grey">#dcd7da</color>
+    <color name="white">#fafafa</color>
 </resources>
