--- a/app/src/main/res/layout/item/layout/activity_broswer.xml
+++ b/app/src/main/res/layout/item/layout/activity_broswer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/linearLayout"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,4 +11,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     ></WebView>
-</RelativeLayout>
+</LinearLayout>
