--- a/app/src/main/res/layout/item/layout/toutiao_item.xml
+++ b/app/src/main/res/layout/item/layout/toutiao_item.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp">
-
+    android:background="@drawable/touch_bg"
+    android:layout_marginLeft="5dp"
+    android:layout_marginTop="10dp">
     <ImageView
         android:id="@+id/iv_thumb"
         android:layout_width="120dp"
@@ -13,7 +14,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginRight="5dp"
+        >
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -28,29 +31,25 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
             <TextView
-                android:id="@+id/tv_category"
+                android:id="@+id/tv_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="头条"
-                android:textColor="@android:color/darker_gray" />
+                android:text="2017-10-13 10:28"
+                android:textColor="@android:color/darker_gray"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/tv_author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:text="环球时报"
                 android:textColor="@android:color/darker_gray" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2017-10-13 10:28"
-            android:textColor="@android:color/darker_gray" />
+
     </LinearLayout>
 </LinearLayout>
