添加水平分割线(LineDecoration)

--- a/app/src/main/res/layout/item/layout/toutiao_item.xml
+++ b/app/src/main/res/layout/item/layout/toutiao_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:background="@drawable/touch_bg"
     android:layout_marginLeft="5dp"
-    android:layout_marginTop="10dp">
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp">
     <ImageView
         android:id="@+id/iv_thumb"
         android:layout_width="120dp"
