--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/toutiao_tab"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+
         >
 
     </android.support.design.widget.TabLayout>
