--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,5 +8,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="CustomActionBarTheme" parent="@style/AppTheme">
 
+        <item name="actionBarSize">40dp</item>
+        <!-- Support library compatibility -->
+
+    </style>
 </resources>
