--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.yhb.news.MainActivity">
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/index_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        ></android.support.v4.view.ViewPager>
+
     <android.support.design.widget.TabLayout
-        android:id="@+id/toutiao_tab"
+        android:id="@+id/nav_tab"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-
-        >
-
+        android:layout_alignBottom="@id/index_viewpager"
+        app:tabSelectedTextColor="@color/colorAccent"
+        android:background="@color/white"
+        app:tabIndicatorHeight="0dp">
     </android.support.design.widget.TabLayout>
-    <android.support.v4.view.ViewPager
-        android:id="@+id/toutiao_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
 
-</LinearLayout>
+</RelativeLayout>
