--- a/app/src/main/res/layout/item/layout/index_tab.xml
+++ b/app/src/main/res/layout/item/layout/index_tab.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-
-    android:layout_height="30dp"
-    >
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+   >
+    <ImageView
+        android:id="@+id/index_image"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center"/>
 <TextView
-    android:id="@+id/text_title"
+    android:id="@+id/index_title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
+    android:text="资讯"
     android:textSize="10sp"/>
 </LinearLayout>
