--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,17 +10,17 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/index_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         ></android.support.v4.view.ViewPager>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/nav_tab"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_alignBottom="@id/index_viewpager"
         app:tabSelectedTextColor="@color/colorAccent"
         android:background="@color/white"
         app:tabIndicatorHeight="0dp">
     </android.support.design.widget.TabLayout>
 
-</RelativeLayout>
+</LinearLayout>
