--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,12 @@
     android:orientation="vertical"
     tools:context="com.yhb.news.MainActivity">
 
-    <android.support.v4.view.ViewPager
+    <com.yhb.news.views.NoScrollViewPager
         android:id="@+id/index_viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        ></android.support.v4.view.ViewPager>
+        ></com.yhb.news.views.NoScrollViewPager>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/nav_tab"
