--- a/app/src/main/res/layout/item/layout/meinv_item.xml
+++ b/app/src/main/res/layout/item/layout/meinv_item.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:background="@color/colorAccent"
+    app:cardElevation="1dp"
+    android:layout_margin="20dp">
+
 <ImageView
     android:id="@+id/iv_thumb"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:scaleType="fitXY"
     />
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"/>
-</LinearLayout>
+
+</android.support.v7.widget.CardView>
