--- a/app/src/main/res/layout/item/layout/news_item.xml
+++ b/app/src/main/res/layout/item/layout/news_item.xml
@@ -10,7 +10,8 @@
         android:id="@+id/iv_thumb"
         android:layout_width="120dp"
         android:layout_height="90dp"
-        android:layout_marginRight="10dp" />
+        android:layout_marginRight="10dp"
+        android:scaleType="fitXY"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
