--- a/app/src/main/res/layout/item/layout/news_item.xml
+++ b/app/src/main/res/layout/item/layout/news_item.xml
@@ -32,24 +32,28 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             >
-
-            <TextView
-                android:id="@+id/tv_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2017-10-13 10:28"
-                android:textColor="@android:color/darker_gray"
-                />
 
             <TextView
                 android:id="@+id/tv_author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="环球时报"
-                android:textColor="@android:color/darker_gray" />
+                android:textSize="12sp"
+                android:textColor="@android:color/darker_gray"
+                />
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2017-10-13 10:28"
+                android:textSize="12sp"
+                android:textColor="@android:color/darker_gray"
+                />
+
         </LinearLayout>
 
 
