--- a/app/src/main/res/layout/item/layout/activity_bigimage.xml
+++ b/app/src/main/res/layout/item/layout/activity_bigimage.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.yhb.news.BigImageActivity">
+    tools:context="com.yhb.news.BigImageActivity"
+    android:background="@color/cardview_dark_background"
+    >
 <uk.co.senab.photoview.PhotoView
     android:id="@+id/photoView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cardview_dark_background"/>
+    android:layout_centerInParent="true"
+   />
+    <ImageView
+        android:id="@+id/iv_download"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/download"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="20dp" android:visibility="invisible"/>
 </RelativeLayout>
