--- a/app/src/main/res/layout/item/layout/meitu_item.xml
+++ b/app/src/main/res/layout/item/layout/meitu_item.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorAccent"
-    app:cardElevation="1dp"
-    android:layout_margin="20dp">
+    android:background="@color/colorAccent"   >
 
 <ImageView
     android:id="@+id/iv_thumb"
