--- a/app/src/main/res/layout/item/layout/meitu_page.xml
+++ b/app/src/main/res/layout/item/layout/meitu_page.xml
@@ -8,7 +8,10 @@
         android:id="@+id/tab_meitu"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        app:tabSelectedTextColor="@color/colorAccent">
+        app:tabSelectedTextColor="@color/colorAccent"
+        app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
+        app:tabTextColor="@android:color/tertiary_text_light"
+        >
 
     </android.support.design.widget.TabLayout>
     <android.support.v4.view.ViewPager
